# SpaceUnknown

./: .gitignore
TowerEngine/Game/: CMakeLists.txt  RememdyDebugger.rdbg  TowerEngine.sublime-build  build.bat  debugger_game.bat  debugger_game_remedy.bat  debugger_preprocessor.bat  run_emscripten.bat
TowerEngine/Game/assets/: Cube.dae  Empty.dae  Monkey.dae  NodeTesting.blend  NodeTesting.blend1  NodeTesting.dae  Plane.dae  Pointer.dae  Sphere.dae  UnitCube.dae
TowerEngine/Game/assets/EngineResources/: Arrow.blend  Arrow.blend1  Arrow.dae  Camera.blend  Camera.blend1  Camera.dae  Circle.blend  Circle.blend1  Circle.dae  Light_Directional.blend  Light_Directional.blend1  Light_Directional.dae  Light_Point.blend  Light_Point.blend1  Light_Point.dae  Plane.blend  Plane.dae  Sphere.blend  Sphere.blend1  Sphere.dae
TowerEngine/Game/assets/Materials/: Basic.material  BasicTex.material  EmptyBasic.material  EquiTest.material  Gizmo.material  GroundBasic.material  PBR.material  PBRBot.material  RobotRegular.material  Shieldo.material  StoneSkeletal.material
TowerEngine/Game/assets/PBRBall/: PBRBall.blend  PBRBall.blend1  PBRBall.dae  PBRBall.spp  PBRBall_autosave_0.spp  (+1 more)
TowerEngine/Game/build_scripts/: build_android.bat  build_android_debugAPK.bat  build_android_releaseAAB.bat  build_android_releaseAPK.bat  build_emscripten.bat  build_emscripten_dev.bat  build_emscripten_release.bat  build_linux.sh  build_win32.bat  cmake_build.bat  package_win32.bat  sign_android TEMPLATE.bat
TowerEngine/Game/code/: emscripten_shell.html  preprocessor.cpp  preprocessor.h
(+458 files in other folders)
